// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Temporal.PlainDateTime > crossSerialize > scoped > supports Temporal.PlainDateTime 1`] = `"($R=>$R[0]=Temporal.PlainDateTime.from("2012-03-04T12:34:56.789"))($R["example"])"`;

exports[`Temporal.PlainDateTime > crossSerialize > supports Temporal.PlainDateTime 1`] = `"$R[0]=Temporal.PlainDateTime.from("2012-03-04T12:34:56.789")"`;

exports[`Temporal.PlainDateTime > crossSerializeAsync > scoped > supports Temporal.PlainDateTime 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=Temporal.PlainDateTime.from("2012-03-04T12:34:56.789")))($R["example"])"`;

exports[`Temporal.PlainDateTime > crossSerializeAsync > supports Temporal.PlainDateTime 1`] = `"$R[0]=Promise.resolve($R[1]=Temporal.PlainDateTime.from("2012-03-04T12:34:56.789"))"`;

exports[`Temporal.PlainDateTime > crossSerializeStream > scoped > supports Temporal.PlainDateTime 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`Temporal.PlainDateTime > crossSerializeStream > scoped > supports Temporal.PlainDateTime 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainDateTime.from("2012-03-04T12:34:56.789")))($R["example"])"
`;

exports[`Temporal.PlainDateTime > crossSerializeStream > supports Temporal.PlainDateTime 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`Temporal.PlainDateTime > crossSerializeStream > supports Temporal.PlainDateTime 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Temporal.PlainDateTime.from("2012-03-04T12:34:56.789"))"
`;

exports[`Temporal.PlainDateTime > serialize > supports Temporal.PlainDateTime 1`] = `"Temporal.PlainDateTime.from("2012-03-04T12:34:56.789")"`;

exports[`Temporal.PlainDateTime > serializeAsync > supports Temporal.PlainDateTime 1`] = `"Promise.resolve(Temporal.PlainDateTime.from("2012-03-04T12:34:56.789"))"`;

exports[`Temporal.PlainDateTime > toCrossJSON > supports Temporal.PlainDateTime 1`] = `"{"t":36,"i":0,"s":"2012-03-04T12:34:56.789","c":3}"`;

exports[`Temporal.PlainDateTime > toCrossJSONAsync > supports Temporal.PlainDateTime 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"2012-03-04T12:34:56.789","c":3}}"`;

exports[`Temporal.PlainDateTime > toCrossJSONStream > supports Temporal.PlainDateTime 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Temporal.PlainDateTime > toCrossJSONStream > supports Temporal.PlainDateTime 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":36,"i":3,"s":"2012-03-04T12:34:56.789","c":3}]}"`;

exports[`Temporal.PlainDateTime > toJSON > supports Temporal.PlainDateTime 1`] = `"{"t":{"t":36,"i":0,"s":"2012-03-04T12:34:56.789","c":3},"f":127,"m":[]}"`;

exports[`Temporal.PlainDateTime > toJSONAsync > supports Temporal.PlainDateTime 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":36,"i":1,"s":"2012-03-04T12:34:56.789","c":3}},"f":127,"m":[]}"`;
